# ratatoskr

./: .gitignore  Cargo.toml  README.md  build_and_dotfile_it.sh
src/: config.rs  lib.rs  main.rs  sysutils.rs  utils.rs
