[package]
name = "ratatoskr"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sysinfo = "0.35.0"
once_cell = "1.19"
niri-ipc = "=25.5.1"
freedesktop-icons = "0.4"
libpulse-binding = "2"
chrono = "0.4.41"
zbus = "4"
zvariant = "4"
battery = { git = "https://github.com/trollLemon/rust-battery.git", version = "0.7.8" }


[[bin]]
name = "sock-ratatoskr"
path = "src/bin/sock_ratatoskr.rs"


[[bin]]
name = "legacy-ratatoskr"
path = "src/bin/legacy_ratatoskr.rs"
